use chakra components

--- a/package.json
+++ b/package.json
@@ -87,6 +87,10 @@
   },
   "dependencies": {
     "@babel/runtime": "7.4.5",
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "framer-motion": "^6.5.1",
     "invariant": "^2.2.4",
     "prop-types": "^15.5.8",
     "substyle": "^9.1.0"
